new phone mockup

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <i id="power_button" class="fa-solid fa-power-off"></i>
                         <i class="fa-solid fa-gear"></i>
                     </div>
-                    <img src="./media/iphone3.png" alt="">
+                    <img src="./media/iphone.png" alt="">
                 </div>
                 <div class="content">
                     <h4>App for remote control</h4>
