--- a/index.html
+++ b/index.html
@@ -202,14 +202,14 @@
             <div class="content">
                 <div class="profile">
                     <div class="photo">
-                        <img src="./media/profile.png" alt="Author 1">
+                        <img src="./media/1.png" alt="Author 1">
                     </div>
                     <span>Name Surname</span>
                     <p>Some description about first author of this startup</p>
                 </div>
                 <div class="profile">
                     <div class="photo">
-                        <img src="./media/profile.png" alt="Author 2">
+                        <img src="./media/2.png" alt="Author 2">
                     </div>
                     <span>Name Surname</span>
                     <p>Some description about first author of this startup</p>
