--- a/index.html
+++ b/index.html
@@ -103,14 +103,19 @@
                         <button class="Hotspot" slot="hotspot-2" data-surface="3 0 50 49 51 0.860 0.031 0.109"
                             data-visibility-attribute="visible">
                             <div class="HotspotAnnotation 1">Detail 1</div>
-                        </button><button class="Hotspot" slot="hotspot-4"
-                            data-surface="1 0 4882 4881 4883 0.076 0.171 0.754" data-visibility-attribute="visible">
+                        </button>
+                        <button class="Hotspot" slot="hotspot-4"
+                            data-position="-42.5m 58.708046532100795m 60.54644976992594m" data-normal="-1m 0m 0m"
+                            data-visibility-attribute="visible">
                             <div class="HotspotAnnotation 2">Detail 2</div>
-                        </button><button class="Hotspot" slot="hotspot-5"
-                            data-surface="1 0 1575 1579 1580 0.003 0.392 0.605" data-visibility-attribute="visible">
+                        </button>
+                        <button class="Hotspot" slot="hotspot-5"
+                            data-position="47.5m 14.538752040022857m 57.83976452662373m" data-normal="1m 0m 0m"
+                            data-visibility-attribute="visible">
                             <div class="HotspotAnnotation 3">Detail 3</div>
-                        </button><button class="Hotspot" slot="hotspot-7"
-                            data-surface="1 0 3960 3961 3962 0.041 0.411 0.548" data-visibility-attribute="visible">
+                        </button>
+                        <button class="Hotspot" slot="hotspot-7" data-surface="1 0 3960 3961 3962 0.041 0.411 0.548"
+                            data-visibility-attribute="visible">
                             <div class="HotspotAnnotation 4">Detail 4</div>
                         </button>
                     </model-viewer>
@@ -135,7 +140,7 @@
                                 <i class="fa-regular fa-bell" style="color: #ffffff;"></i>
                             </div>
                             <div class="glow-outer"></div>
-                            
+
                             <div class="progress-bar">
                                 <div class="bar"></div>
                                 <div class="bar loaded"></div>
@@ -153,13 +158,14 @@
                         </div>
                     </div>
                     <div class="model-view">
-                        <model-viewer id="phone-view" class="model" src="./media/assets/Candle (2).gltf"  ar
-                        ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" exposure="0.21"
-                        disable-pan disable-zoom shadow-softness="1" camera-orbit="50deg 86.04deg 9006m"
-                        auto-rotate-delay="0"  min-camera-orbit="50deg 84deg auto" max-camera-orbit="135deg 84deg auto"
-                        interpolation-decay="300" field-of-view="30deg" touch-action="none" interaction-prompt="none"
-                        environment-image="./media/assets/lightroom_14b.hdr">
-                    </model-viewer>
+                        <model-viewer id="phone-view" class="model" src="./media/assets/Candle (2).gltf" ar
+                            ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2"
+                            exposure="0.21" disable-pan disable-zoom shadow-softness="1"
+                            camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
+                            min-camera-orbit="50deg 84deg auto" max-camera-orbit="135deg 84deg auto"
+                            interpolation-decay="300" field-of-view="30deg" touch-action="none"
+                            interaction-prompt="none" environment-image="./media/assets/lightroom_14b.hdr">
+                        </model-viewer>
                     </div>
                     <div class="tools-bar">
                         <i class="fa-solid fa-house"></i>
