--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 
 <body>
     <div class="wrapper">
+        <div class="header">
+            <div class="title">
+                Ice Candle
+            </div>
+            <button class="notify">
+                Notify me
+            </button>
+        </div>
         <header>
             <div style="overflow-y: hidden; position: relative;">
                 <div class="header-span">
