--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 vitae. Arcu nibh bibendum venenatis adipiscing aliquet.
             </div>
             <div class="day-night animated">
-                <section class="candle-section static">
+                <section class="candle-section static dayNight">
                     <div class="wix-img">
                         <model-viewer class="model" src="./media/assets/Candle_with_glass.glb"
                             ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" disable-pan
@@ -267,7 +267,7 @@
     <div class="modal main">
         <i class="fa-solid fa-xmark" id="close"></i>
         <h2>Stay up to date. </h2>
-        <span>Get updates on Apple Vision Pro, including news about availability. </span>
+        <span>Get updates on Ice Candle, including news about availability. </span>
         <div class="field">
             <input type="email" name="email" id="email" placeholder="Email Adress">
             <button type="submit">Notify me</button>
