--- a/index.html
+++ b/index.html
@@ -216,16 +216,26 @@
             <div class="content">
                 <div class="profile">
                     <div class="photo">
-                        <img src="./media/1.png" alt="Author 1">
+                        <img src="./media/2.png" alt="Author 2">
                     </div>
-                    <span>Name Surname</span>
+                    <span>
+                        Name Surname
+                        <a href="">
+                            <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
+                        </a>
+                    </span>
                     <p>Some description about first author of this startup</p>
                 </div>
                 <div class="profile">
                     <div class="photo">
-                        <img src="./media/2.png" alt="Author 2">
+                        <img src="./media/1.png" alt="Author 1">
                     </div>
-                    <span>Name Surname</span>
+                    <span>
+                        Name Surname
+                        <a href="">
+                            <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
+                        </a>
+                    </span>
                     <p>Some description about first author of this startup</p>
                 </div>
             </div>
