--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" exposure="0.21"
                         disable-pan disable-zoom shadow-softness="1" camera-orbit="-25.03deg 86.04deg 9006m"
                         auto-rotate-delay="0" min-camera-orbit="105deg 84deg auto" max-camera-orbit="135deg 84deg auto"
-                        interpolation-decay="300" field-of-view="30deg" touch-action="none" interaction-prompt="none">
+                        interpolation-decay="300" field-of-view="30deg" touch-action="pan-y" interaction-prompt="none">
                     </model-viewer>
                 </div>
 
@@ -171,7 +171,7 @@
                             exposure="0.21" disable-pan disable-zoom shadow-softness="1"
                             camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
                             min-camera-orbit="50deg 84deg auto" max-camera-orbit="135deg 84deg auto"
-                            interpolation-decay="300" field-of-view="30deg" touch-action="none"
+                            interpolation-decay="300" field-of-view="30deg" touch-action="pan-y"
                             interaction-prompt="none" environment-image="./media/assets/lightroom_14b.hdr">
                         </model-viewer>
                     </div>
