added linkedin links

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     </div>
                     <span>
                         Name Surname
-                        <a href="">
+                        <a href="https://www.linkedin.com/in/pavelm1/" target="_blank">
                             <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
                         </a>
                     </span>
@@ -232,7 +232,7 @@
                     </div>
                     <span>
                         Name Surname
-                        <a href="">
+                        <a href="https://www.linkedin.com/in/danylo-semerak" target="_blank">
                             <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
                         </a>
                     </span>
