rm lazy loading in models

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     libero tortor volutpat tortor porttitor habitasse.
                 </div>
                 <div class="wix-img wix-img-anim">
-                    <model-viewer class="model" src="./media/assets/Candle_with_glass.glb" ar
+                    <model-viewer class="model" src="./media/assets/Candle_with_glass.glb" ar loading="eager"
                         ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" exposure="0.21"
                         disable-pan disable-zoom shadow-softness="1" camera-orbit="-25.03deg 86.04deg 9006m"
                         auto-rotate-delay="0" min-camera-orbit="105deg 84deg auto" max-camera-orbit="135deg 84deg auto"
@@ -105,7 +105,7 @@
                     <div class="description"></div>
                 </div>
                 <div class="wix-img">
-                    <model-viewer class="model" src="./media/assets/Candle_with_glass.glb" ar
+                    <model-viewer class="model" src="./media/assets/Candle_with_glass.glb" ar loading="eager"
                         ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" exposure="0.21"
                         disable-pan disable-zoom shadow-softness="1" auto-rotate min-camera-orbit="auto 84deg auto"
                         max-camera-orbit="auto 84deg auto" touch-action="pan-y" interaction-prompt="none">
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                     <div class="model-view">
-                        <model-viewer id="phone-view" class="model" src="./media/assets/Candle (2).gltf" ar
+                        <model-viewer id="phone-view" class="model" src="./media/assets/Candle (2).gltf" ar loading="eager"
                             ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2"
                             exposure="0.21" disable-pan disable-zoom shadow-softness="1"
                             camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
