--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 <body>
     <div class="wrapper">
         <div class="header">
-            <div class="title">
-                Ice Candle
+            <div class="container">
+                <div class="title">
+                    Ice Candle
+                </div>
+                <button class="notify" id="notify">
+                    Notify me
+                </button>
             </div>
-            <button class="notify" id="notify">
-                Notify me
-            </button>
         </div>
         <header>
             <div style="overflow-y: hidden; position: relative;">
