--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     libero tortor volutpat tortor porttitor habitasse.
                 </div>
                 <div class="wix-img wix-img-anim">
-                    <model-viewer class="model" src="./media/assets/Candle_with_glass.glb" ar loading="eager" powerPreference="low-power"
+                    <model-viewer class="model" src="./media/assets/CandleStatic.gltf" ar loading="eager" powerPreference="low-power"
                         ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" exposure="0.21"
                         disable-pan disable-zoom shadow-softness="1" camera-orbit="-25.03deg 86.04deg 9006m"
                         auto-rotate-delay="0" min-camera-orbit="105deg 84deg auto" max-camera-orbit="135deg 84deg auto"
@@ -107,7 +107,7 @@
                     <div class="description"></div>
                 </div>
                 <div class="wix-img">
-                    <model-viewer class="model" src="./media/assets/Candle_with_glass.glb" ar loading="eager" powerPreference="low-power"
+                    <model-viewer class="model" src="./media/assets/CandleStatic.gltf" ar loading="eager" powerPreference="low-power"
                         ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" exposure="0.21"
                         disable-pan disable-zoom shadow-softness="1" auto-rotate min-camera-orbit="auto 84deg auto"
                         max-camera-orbit="auto 84deg auto" touch-action="pan-y" interaction-prompt="none">
@@ -169,13 +169,13 @@
                         </div>
                     </div>
                     <div class="model-view">
-                        <model-viewer id="phone-view" class="model" src="./media/assets/Candle (2).gltf" ar loading="eager" powerPreference="low-power"
+                        <model-viewer id="phone-view" class="model" src="./media/assets/CandleFast.gltf" ar loading="eager" powerPreference="low-power"
                             ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2"
                             exposure="0.21" disable-pan disable-zoom shadow-softness="1"
                             camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
                             min-camera-orbit="50deg 84deg auto" max-camera-orbit="135deg 84deg auto"
                             interpolation-decay="300" field-of-view="30deg" touch-action="pan-y"
-                            interaction-prompt="none" environment-image="./media/assets/lightroom_14b.hdr">
+                            interaction-prompt="none"">
                         </model-viewer>
                     </div>
                     <div class="tools-bar">
@@ -255,7 +255,7 @@
             <div class="day-night animated">
                 <section class="candle-section static dayNight">
                     <div class="wix-img">
-                        <model-viewer class="model" src="./media/assets/Candle_with_glass.glb"
+                        <model-viewer class="model" src="./media/assets/CandleStatic.gltf"
                             ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" disable-pan powerPreference="low-power"
                             disable-zoom shadow-softness="1" auto-rotate min-camera-orbit="auto 84deg auto"
                             max-camera-orbit="auto 84deg auto" touch-action="none" interaction-prompt="none"
