--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <header>
             <div style="overflow-y: hidden; position: relative;">
-                
+
             </div>
             <div class="header-span">
                 <h1>Light up your life</h1>
@@ -38,10 +38,11 @@
                     libero tortor volutpat tortor porttitor habitasse.
                 </div>
                 <div class="wix-img wix-img-anim">
-                    <model-viewer class="model" src="./media/assets/CandleStatic.gltf" ar loading="eager" powerPreference="low-power"
-                        ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" exposure="0.21"
-                        disable-pan disable-zoom shadow-softness="1" camera-orbit="-25.03deg 86.04deg 9006m"
-                        auto-rotate-delay="0" min-camera-orbit="105deg 84deg auto" max-camera-orbit="135deg 84deg auto"
+                    <model-viewer class="model" src="./media/assets/CandleStatic.gltf" ar loading="eager"
+                        powerPreference="low-power" ar-modes="webxr scene-viewer quick-look" camera-controls
+                        shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1"
+                        camera-orbit="-25.03deg 86.04deg 9006m" auto-rotate-delay="0"
+                        min-camera-orbit="105deg 84deg auto" max-camera-orbit="135deg 84deg auto"
                         interpolation-decay="300" field-of-view="30deg" touch-action="pan-y" interaction-prompt="none">
                     </model-viewer>
                 </div>
@@ -107,22 +108,23 @@
                     <div class="description"></div>
                 </div>
                 <div class="wix-img">
-                    <model-viewer class="model" src="./media/assets/CandleStatic.gltf" ar loading="eager" powerPreference="low-power"
-                        ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" exposure="0.21"
-                        disable-pan disable-zoom shadow-softness="1" auto-rotate min-camera-orbit="auto 84deg auto"
-                        max-camera-orbit="auto 84deg auto" touch-action="pan-y" interaction-prompt="none">
+                    <model-viewer class="model" src="./media/assets/CandleStatic.gltf" ar loading="eager"
+                        powerPreference="low-power" ar-modes="webxr scene-viewer quick-look" camera-controls
+                        shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1" auto-rotate
+                        min-camera-orbit="auto 84deg auto" max-camera-orbit="auto 84deg auto" touch-action="pan-y"
+                        interaction-prompt="none">
                         <button class="Hotspot" slot="hotspot-2" data-surface="3 0 50 49 51 0.860 0.031 0.109"
                             data-visibility-attribute="visible">
                             <div class="HotspotAnnotation 1">Detail 1</div>
                         </button>
                         <button class="Hotspot" slot="hotspot-4"
-                            data-position="-42.5m 58.708046532100795m 60.54644976992594m" data-normal="-1m 0m 0m"
-                            data-visibility-attribute="visible">
+                            data-position="-0.010002614677618059m 0.060397070733679455m -0.07059201051732772m"
+                            data-normal="-1m 0m 0m" data-visibility-attribute="visible">
                             <div class="HotspotAnnotation 2">Detail 2</div>
                         </button>
                         <button class="Hotspot" slot="hotspot-5"
-                            data-position="47.5m 14.538752040022857m 57.83976452662373m" data-normal="1m 0m 0m"
-                            data-visibility-attribute="visible">
+                            data-position="0.033522425627416134m 0.017586686547540795m 0.0499497186998054m"
+                            data-normal="1m 0m 0m" data-visibility-attribute="visible">
                             <div class="HotspotAnnotation 3">Detail 3</div>
                         </button>
                         <button class="Hotspot" slot="hotspot-7" data-surface="1 0 3960 3961 3962 0.041 0.411 0.548"
@@ -169,19 +171,19 @@
                         </div>
                     </div>
                     <div class="model-view">
-                        <model-viewer id="phone-view" class="model" src="./media/assets/CandleFast.gltf" ar loading="eager" powerPreference="low-power"
-                            ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2"
-                            exposure="0.21" disable-pan disable-zoom shadow-softness="1"
-                            camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
+                        <model-viewer id="phone-view" class="model" src="./media/assets/CandleFast.gltf" ar
+                            loading="eager" powerPreference="low-power" ar-modes="webxr scene-viewer quick-look"
+                            camera-controls shadow-intensity="2" exposure="0.21" disable-pan disable-zoom
+                            shadow-softness="1" camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
                             min-camera-orbit="50deg 84deg auto" max-camera-orbit="135deg 84deg auto"
                             interpolation-decay="300" field-of-view="30deg" touch-action="pan-y"
                             interaction-prompt="none"">
                         </model-viewer>
                     </div>
-                    <div class="tools-bar">
-                        <i class="fa-solid fa-house"></i>
-                        <i id="power_button" class="fa-solid fa-power-off"></i>
-                        <i class="fa-solid fa-gear"></i>
+                    <div class=" tools-bar">
+                            <i class="fa-solid fa-house"></i>
+                            <i id="power_button" class="fa-solid fa-power-off"></i>
+                            <i class="fa-solid fa-gear"></i>
                     </div>
                     <img src="./media/iphone.png" alt="">
                 </div>
@@ -256,10 +258,10 @@
                 <section class="candle-section static dayNight">
                     <div class="wix-img">
                         <model-viewer class="model" src="./media/assets/CandleStatic.gltf"
-                            ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" disable-pan powerPreference="low-power"
-                            disable-zoom shadow-softness="1" auto-rotate min-camera-orbit="auto 84deg auto"
-                            max-camera-orbit="auto 84deg auto" touch-action="none" interaction-prompt="none"
-                            exposure="0.21">
+                            ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" disable-pan
+                            powerPreference="low-power" disable-zoom shadow-softness="1" auto-rotate
+                            min-camera-orbit="auto 84deg auto" max-camera-orbit="auto 84deg auto" touch-action="none"
+                            interaction-prompt="none" exposure="0.21">
                         </model-viewer>
                     </div>
                 </section>
