--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
 <div class="feedback closed">
     <div class="modal main">
         <i class="fa-solid fa-xmark" id="close"></i>
-        <h2>Stay up to date. </h2>
-        <span>Get updates on Ice Candle, including news about availability. </span>
+        <h2>Stay up to date </h2>
+        <span>Get updates on Ice Candle, including news about availability </span>
         <div class="field">
             <input type="email" name="email" id="email" placeholder="Email Adress">
             <button type="submit">Notify me</button>
