--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             shadow-softness="1" camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
                             min-camera-orbit="50deg 84deg auto" max-camera-orbit="135deg 84deg auto"
                             interpolation-decay="300" field-of-view="30deg" touch-action="pan-y"
-                            interaction-prompt="none"">
+                            interaction-prompt="none">
                         </model-viewer>
                     </div>
                     <div class=" tools-bar">
