new animation of loading bar

--- a/index.html
+++ b/index.html
@@ -159,11 +159,15 @@
                                 <div class="bar loaded"></div>
                                 <div id="time-left">
                                     <div class="block">
-                                        <div class="digit">2</div>
+                                        <div class="digit">
+                                            <i class="fa-solid fa-clock"></i>
+                                        </div>
                                         <div class="desc">hour</div>
                                     </div>
                                     <div class="block">
-                                        <div class="digit">10</div>
+                                        <div class="digit">
+                                            <i class="fa-solid fa-clock"></i>
+                                        </div>
                                         <div class="desc">min</div>
                                     </div>
                                 </div>
