--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                     <model-viewer class="model" src="./media/assets/CandleStatic.gltf" ar loading="eager"
                         powerPreference="low-power" ar-modes="webxr scene-viewer quick-look" camera-controls
                         shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1"
-                        camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
-                            min-camera-orbit="50deg 84deg auto" max-camera-orbit="135deg 84deg auto"
-                        interpolation-decay="300" field-of-view="30deg" touch-action="pan-y" interaction-prompt="none">
+                        camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0" min-camera-orbit="50deg 84deg auto"
+                        max-camera-orbit="135deg 84deg auto" interpolation-decay="300" field-of-view="30deg"
+                        touch-action="pan-y" interaction-prompt="none">
                     </model-viewer>
                 </div>
 
@@ -181,28 +181,39 @@
                             shadow-softness="1" camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
                             min-camera-orbit="50deg 84deg auto" max-camera-orbit="135deg 84deg auto"
                             interpolation-decay="300" field-of-view="30deg" touch-action="pan-y"
-                            interaction-prompt="none">
+                            interaction-prompt="none" environment-image="./media/assets/lightroom_14b.hdr">
                         </model-viewer>
                     </div>
                     <div class=" tools-bar">
-                            <i class="fa-solid fa-house"></i>
-                            <i id="power_button" class="fa-solid fa-power-off"></i>
-                            <i class="fa-solid fa-gear"></i>
+                        <i class="fa-solid fa-house"></i>
+                        <i id="power_button" class="fa-solid fa-power-off"></i>
+                        <i class="fa-solid fa-gear"></i>
                     </div>
                     <img src="./media/iphone.png" alt="">
                 </div>
                 <div class="content">
                     <h4>App for remote control</h4>
-                    Lorem ipsum dolor sit amet consectetur. Eget pulvinar blandit nibh ac purus nulla consectetur id
-                    velit. Ut aliquam nunc urna fringilla amet mattis. Curabitur posuere suspendisse in sem. A semper
-                    nisl dictumst tortor nibh. Sagittis libero et hendrerit sed orci. Phasellus vulputate mi sem amet
-                    molestie feugiat vitae. Arcu nibh bibendum venenatis adipiscing aliquet.
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur. Eget pulvinar blandit nibh ac purus nulla consectetur id
+                        velit. Ut aliquam nunc urna fringilla amet mattis. Curabitur posuere suspendisse in sem. A
+                        semper
+                        nisl dictumst tortor nibh. Sagittis libero et hendrerit sed orci. Phasellus vulputate mi sem
+                        amet
+                        molestie feugiat vitae. Arcu nibh bibendum venenatis adipiscing aliquet.
+                    </p>
+                    <p>
+                        <span>Lacus eget amet</span> tristique ut vel egestas elit id luctus. Mauris cursus vitae
+                        laoreet habitasse
+                        integer libero molestie mi diam. Amet enim volutpat suspendisse at consequat urna porttitor. In
+                        quis
+                        amet morbi nullam non tortor at quis risus.
+                        Cursus enim ultrices mauris tortor. Quis hendrerit interdum quam nec et tristique. Viverra sed
+                        nulla
+                        egestas in.
 
-                    Lacus eget amet tristique ut vel egestas elit id luctus. Mauris cursus vitae laoreet habitasse
-                    integer libero molestie mi diam. Amet enim volutpat suspendisse at consequat urna porttitor. In quis
-                    amet morbi nullam non tortor at quis risus.
-                    Cursus enim ultrices mauris tortor. Quis hendrerit interdum quam nec et tristique. Viverra sed nulla
-                    egestas in.
+                    </p>
+
+
                 </div>
             </div>
             <div class="continue-section">
