--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
                                 <div class="bar loaded"></div>
                                 <div id="time-left">
                                     <div class="block">
-                                        <div class="digit">
+                                        <div class="digit 2">
                                             <i class="fa-solid fa-clock"></i>
                                         </div>
                                         <div class="desc">hour</div>
                                     </div>
                                     <div class="block">
-                                        <div class="digit">
+                                        <div class="digit 16">
                                             <i class="fa-solid fa-clock"></i>
                                         </div>
                                         <div class="desc">min</div>
