--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <model-viewer class="model" src="./media/assets/CandleStatic.gltf" ar loading="eager"
                         powerPreference="low-power" ar-modes="webxr scene-viewer quick-look" camera-controls
                         shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1"
-                        camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0" min-camera-orbit="50deg 84deg auto"
-                        max-camera-orbit="300deg 84deg auto" interpolation-decay="800" field-of-view="30deg"
+                        camera-orbit="300deg 84deg auto" auto-rotate-delay="0" min-camera-orbit="300deg 84deg auto"
+                        max-camera-orbit="420deg 84deg auto" interpolation-decay="800" field-of-view="30deg"
                         touch-action="pan-y" interaction-prompt="none">
                     </model-viewer>
                 </div>
