--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                         </button>
                     </model-viewer>
                 </div>
+                <div class="arrow">MOVE ME</div>
             </section>
         </section>
         <section class="phone-section">
