new observer added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div style="overflow-y: hidden; position: relative;">
 
             </div>
-            <div class="header-span">
+            <div class="header-span static">
                 <h1>Light up your life</h1>
             </div>
             <section class="candle-section-head">
@@ -43,7 +43,7 @@
                         shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1"
                         camera-orbit="300deg 84deg auto" auto-rotate-delay="0" min-camera-orbit="300deg 84deg auto"
                         max-camera-orbit="420deg 84deg auto" interpolation-decay="800" field-of-view="30deg"
-                        touch-action="pan-y" interaction-prompt="none">
+                        touch-action="pan-y" interaction-prompt="none" poster="./media/1.png">
                     </model-viewer>
                 </div>
 
