custom preloader test

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1"
                         camera-orbit="300deg 84deg auto" auto-rotate-delay="0" min-camera-orbit="300deg 84deg auto"
                         max-camera-orbit="420deg 84deg auto" interpolation-decay="800" field-of-view="30deg"
-                        touch-action="pan-y" interaction-prompt="none" poster="./media/1.png">
+                        touch-action="pan-y" interaction-prompt="none" poster="./media/transp.png">
                     </model-viewer>
                 </div>
 
