--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     libero tortor volutpat tortor porttitor habitasse.
                 </div>
                 <div class="wix-img wix-img-anim">
-                    <model-viewer class="model" src="./media/assets/CandleStaticLight.gltf" ar loading="eager"
+                    <model-viewer class="model" src="./media/assets/CandleStaticLight.gltf" ar
                         powerPreference="low-power" ar-modes="webxr scene-viewer quick-look" camera-controls
                         shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1"
                         camera-orbit="300deg 84deg auto" auto-rotate-delay="0" min-camera-orbit="300deg 84deg auto"
@@ -108,7 +108,7 @@
                     <div class="description"></div>
                 </div>
                 <div class="wix-img">
-                    <model-viewer class="model" src="./media/assets/CandleStaticLight.gltf" ar loading="eager"
+                    <model-viewer class="model" src="./media/assets/CandleStaticLight.gltf" ar
                         powerPreference="low-power" ar-modes="webxr scene-viewer quick-look" camera-controls
                         shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1" auto-rotate
                         min-camera-orbit="auto 84deg auto" max-camera-orbit="auto 84deg auto" touch-action="pan-y"
@@ -177,7 +177,7 @@
                     </div>
                     <div class="model-view">
                         <model-viewer id="phone-view" class="model" src="./media/assets/CandleFast.gltf" ar
-                            loading="eager" powerPreference="low-power" ar-modes="webxr scene-viewer quick-look"
+                         powerPreference="low-power" ar-modes="webxr scene-viewer quick-look"
                             camera-controls shadow-intensity="2" exposure="0.21" disable-pan disable-zoom
                             shadow-softness="1" camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
                             min-camera-orbit="50deg 84deg auto" max-camera-orbit="135deg 84deg auto"
