--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <div class="plug">
     <div class="bar">
-        <div class="loaded"></div>
+        <div class="loaded" style="width: 0%;"></div>
     </div>
 </div>
 <body>
@@ -47,7 +47,7 @@
                         shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1"
                         camera-orbit="300deg 84deg auto" auto-rotate-delay="0" min-camera-orbit="300deg 84deg auto"
                         max-camera-orbit="420deg 84deg auto" interpolation-decay="800" field-of-view="30deg"
-                        touch-action="pan-y" interaction-prompt="none" poster="./media/transp.png"
+                        touch-action="pan-y" interaction-prompt="none"
                         loading="eager">
                     </model-viewer>
                 </div>
