remove env light, faster loading

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                             shadow-softness="1" camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
                             min-camera-orbit="50deg 84deg auto" max-camera-orbit="135deg 84deg auto"
                             interpolation-decay="300" field-of-view="30deg" touch-action="pan-y"
-                            interaction-prompt="none" environment-image="./media/assets/lightroom_14b.hdr"
+                            interaction-prompt="none"
                             loading="eager">
                         </model-viewer>
                     </div>
