--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="loaded" style="width: 0%;"></div>
     </div>
 </div>
+
 <body>
     <div class="wrapper">
         <div class="header">
@@ -47,8 +48,7 @@
                         shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1"
                         camera-orbit="300deg 84deg auto" auto-rotate-delay="0" min-camera-orbit="300deg 84deg auto"
                         max-camera-orbit="420deg 84deg auto" interpolation-decay="800" field-of-view="30deg"
-                        touch-action="pan-y" interaction-prompt="none"
-                        loading="eager">
+                        touch-action="pan-y" interaction-prompt="none" loading="eager">
                     </model-viewer>
                 </div>
 
@@ -63,9 +63,20 @@
                     <div class="light center"></div>
                 </div>
 
-                <span>Step 1</span>
+                <span>Real Fire</span>
                 <div class="step-content">
-                    Lorem ipsum dolor sit amet consectetur. Pellentesque velit duis enim porta neque.
+                    Experience the traditional cozy fire with cutting-edge technologie </div>
+            </div>
+            <div class="step">
+                <div class="light-container">
+                    <div class="light outer"></div>
+                    <div class="light middle"></div>
+                    <div class="light inner"></div>
+                    <div class="light center"></div>
+                </div>
+                <span>360° Degrees of Visibility</span>
+                <div class="step-content">
+                    The remarkable feature of this invention is its ability to create mesmerizing 360-degree flames.
                 </div>
             </div>
             <div class="step">
@@ -75,9 +86,9 @@
                     <div class="light inner"></div>
                     <div class="light center"></div>
                 </div>
-                <span>Step 2</span>
+                <span>Over-the-air control (smart home integration)</span>
                 <div class="step-content">
-                    Lorem ipsum dolor sit amet consectetur. Pellentesque velit duis enim porta neque.
+                    The process of igniting the candle remotely is seamlessly integrated through a dedicated mobile app.
                 </div>
             </div>
             <div class="step">
@@ -87,22 +98,10 @@
                     <div class="light inner"></div>
                     <div class="light center"></div>
                 </div>
-                <span>Step 3</span>
+                <span>20 hours of continuous flame</span>
                 <div class="step-content">
-                    Lorem ipsum dolor sit amet consectetur. Pellentesque velit duis enim porta neque.
-                </div>
-            </div>
-            <div class="step">
-                <div class="light-container">
-                    <div class="light outer"></div>
-                    <div class="light middle"></div>
-                    <div class="light inner"></div>
-                    <div class="light center"></div>
-                </div>
-                <span>Step 4</span>
-                <div class="step-content">
-                    Lorem ipsum dolor sit amet consectetur. Pellentesque velit duis enim porta neque.
-                </div>
+                    20 hours of continuous flame with one cartridge. Easily replace the magnetic cartridge in 3 seconds
+                    and have infinite experience. </div>
             </div>
         </section>
         <section class="third-section">
@@ -117,25 +116,25 @@
                         powerPreference="low-power" ar-modes="webxr scene-viewer quick-look" camera-controls
                         shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1" auto-rotate
                         min-camera-orbit="auto 84deg auto" max-camera-orbit="auto 84deg auto" touch-action="pan-y"
-                        interaction-prompt="none"
-                        loading="eager">
+                        interaction-prompt="none" loading="eager">
                         <button class="Hotspot" slot="hotspot-2" data-surface="3 0 50 49 51 0.860 0.031 0.109"
                             data-visibility-attribute="visible">
-                            <div class="HotspotAnnotation 1">Detail 1</div>
+                            <div class="HotspotAnnotation 1">Safety glass</div>
                         </button>
                         <button class="Hotspot" slot="hotspot-4"
                             data-position="-0.010002614677618059m 0.060397070733679455m -0.07059201051732772m"
                             data-normal="-1m 0m 0m" data-visibility-attribute="visible">
-                            <div class="HotspotAnnotation 2">Detail 2</div>
+                            <div class="HotspotAnnotation 2">Replaceable Cartridge for Endless Burning</div>
                         </button>
                         <button class="Hotspot" slot="hotspot-5"
                             data-position="0.033522425627416134m 0.017586686547540795m 0.0499497186998054m"
                             data-normal="1m 0m 0m" data-visibility-attribute="visible">
-                            <div class="HotspotAnnotation 3">Detail 3</div>
+                            <div class="HotspotAnnotation 3">One Sensor for Control</div>
                         </button>
-                        <button class="Hotspot" slot="hotspot-7" data-surface="1 0 3960 3961 3962 0.041 0.411 0.548"
-                            data-visibility-attribute="visible">
-                            <div class="HotspotAnnotation 4">Detail 4</div>
+                        <button class="Hotspot" slot="hotspot-7"
+                            data-position="0.033522425627416134m 0.057586686547540795m 0.0099497186998054m"
+                            data-normal="1m 0m 0m" data-visibility-attribute="visible">
+                            <div class="HotspotAnnotation 4">Flame Control</div>
                         </button>
                     </model-viewer>
                 </div>
@@ -183,13 +182,12 @@
                     </div>
                     <div class="model-view">
                         <model-viewer id="phone-view" class="model" src="./media/assets/CandleFast.gltf" ar
-                         powerPreference="low-power" ar-modes="webxr scene-viewer quick-look"
-                            camera-controls shadow-intensity="2" exposure="0.21" disable-pan disable-zoom
-                            shadow-softness="1" camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
+                            powerPreference="low-power" ar-modes="webxr scene-viewer quick-look" camera-controls
+                            shadow-intensity="2" exposure="0.21" disable-pan disable-zoom shadow-softness="1"
+                            camera-orbit="50deg 86.04deg 9006m" auto-rotate-delay="0"
                             min-camera-orbit="50deg 84deg auto" max-camera-orbit="135deg 84deg auto"
                             interpolation-decay="300" field-of-view="30deg" touch-action="pan-y"
-                            interaction-prompt="none"
-                            loading="eager">
+                            interaction-prompt="none" loading="eager">
                         </model-viewer>
                     </div>
                     <div class=" tools-bar">
@@ -202,22 +200,12 @@
                 <div class="content">
                     <h4>App for remote control</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur. Eget pulvinar blandit nibh ac purus nulla consectetur id
-                        velit. Ut aliquam nunc urna fringilla amet mattis. Curabitur posuere suspendisse in sem. A
-                        semper
-                        nisl dictumst tortor nibh. Sagittis libero et hendrerit sed orci. Phasellus vulputate mi sem
-                        amet
-                        molestie feugiat vitae. Arcu nibh bibendum venenatis adipiscing aliquet.
+                        With just a few taps on your smartphone, you can conjure the warm glow of the candle's flame,
+                        creating an atmosphere of relaxation and comfort without ever having to be physically near it.
                     </p>
                     <p>
-                        <span>Lacus eget amet</span> tristique ut vel egestas elit id luctus. Mauris cursus vitae
-                        laoreet habitasse
-                        integer libero molestie mi diam. Amet enim volutpat suspendisse at consequat urna porttitor. In
-                        quis
-                        amet morbi nullam non tortor at quis risus.
-                        Cursus enim ultrices mauris tortor. Quis hendrerit interdum quam nec et tristique. Viverra sed
-                        nulla
-                        egestas in.
+                        <span>This feature</span> not only adds convenience but also adds an element of surprise,
+                        perfect for creating a magical ambiance for special occasions.
 
                     </p>
 
@@ -226,13 +214,11 @@
             </div>
             <div class="continue-section">
                 <div class="left">
-                    <h4>Eco-friendly product</h4>
-                    Lorem ipsum dolor sit amet consectetur. Eget pulvinar blandit nibh ac purus nulla consectetur id
-                    velit.
-                    Ut aliquam nunc urna fringilla amet mattis. Curabitur posuere suspendisse in sem. A semper nisl
-                    dictumst
-                    tortor nibh. Sagittis libero et hendrerit sed orci. Phasellus vulputate mi sem amet molestie feugiat
-                    vitae. Arcu nibh bibendum venenatis adipiscing aliquet.
+                    <h4>360-Degree Visible Flames: Captivating Elegance for Every Space</h4>
+                    Whether placed in the center of a room or on a table, the candle's flames are visible from every
+                    angle, captivating viewers with their dancing, flickering movement.
+                    This innovative design offers a truly immersive experience, enhancing any environment with its
+                    enchanting glow.
                 </div>
                 <div class="right">
                 </div>
@@ -247,7 +233,7 @@
                         <img src="./media/2.png" alt="Author 2">
                     </div>
                     <span>
-                        Name Surname
+                        Pavel
                         <a href="https://www.linkedin.com/in/pavelm1/" target="_blank">
                             <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
                         </a>
@@ -259,7 +245,7 @@
                         <img src="./media/1.png" alt="Author 1">
                     </div>
                     <span>
-                        Name Surname
+                        Danylo
                         <a href="https://www.linkedin.com/in/danylo-semerak" target="_blank">
                             <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
                         </a>
@@ -272,10 +258,7 @@
         <section class="day-night">
             <div class="text-content">
                 <h4>Long lasting light</h4>
-                Lorem ipsum dolor sit amet consectetur. Eget pulvinar blandit nibh ac purus nulla consectetur id velit.
-                Ut aliquam nunc urna fringilla amet mattis. Curabitur posuere suspendisse in sem. A semper nisl dictumst
-                tortor nibh. Sagittis libero et hendrerit sed orci. Phasellus vulputate mi sem amet molestie feugiat
-                vitae. Arcu nibh bibendum venenatis adipiscing aliquet.
+                We're blending the classic beauty of candlelight with modern convenience. Our remote-controlled candle features 360-degree flames that change how we see and use fire. This innovative creation brings together history and modernity, adding elegance and enchantment to any room.
             </div>
             <div class="day-night animated">
                 <section class="candle-section static dayNight">
@@ -294,7 +277,7 @@
                     </div>
                     <div class="sun"></div>
                 </div>
-                <p>Brand name</p>
+                <p>Ice Candle</p>
                 <p>2023 All rights reserved</p>
             </div>
         </section>
