fix layout bugs

--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
                             <div class="HotspotAnnotation 4">Flame Control</div>
                         </button>
                     </model-viewer>
+                    <div class="arrow">MOVE ME</div>
                 </div>
-                <div class="arrow">MOVE ME</div>
+
             </section>
         </section>
         <section class="phone-section">
@@ -258,7 +259,9 @@
         <section class="day-night">
             <div class="text-content">
                 <h4>Long lasting light</h4>
-                We're blending the classic beauty of candlelight with modern convenience. Our remote-controlled candle features 360-degree flames that change how we see and use fire. This innovative creation brings together history and modernity, adding elegance and enchantment to any room.
+                We're blending the classic beauty of candlelight with modern convenience. Our remote-controlled candle
+                features 360-degree flames that change how we see and use fire. This innovative creation brings together
+                history and modernity, adding elegance and enchantment to any room.
             </div>
             <div class="day-night animated">
                 <section class="candle-section static dayNight">
@@ -266,7 +269,7 @@
                         <model-viewer class="model" src="./media/assets/CandleStaticLight.gltf"
                             ar-modes="webxr scene-viewer quick-look" camera-controls shadow-intensity="2" disable-pan
                             powerPreference="low-power" disable-zoom shadow-softness="1" auto-rotate
-                            min-camera-orbit="auto 84deg auto" max-camera-orbit="auto 84deg auto" touch-action="none"
+                            min-camera-orbit="auto 84deg auto" max-camera-orbit="auto 84deg auto" touch-action="pan-y"
                             interaction-prompt="none" exposure="0.21" loading="eager">
                         </model-viewer>
                     </div>
